--- a/app/templates/post_job.html
+++ b/app/templates/post_job.html
@@ -1,3 +1,4 @@
+<!-- This page allows authenticated facilitators to post jobs. -->
 {% extends "base.html" %}
 {% block content %}
 <h2 class="mb-4">Post a Job</h2>
