--- a/templates/index.html
+++ b/templates/index.html
@@ -5,20 +5,25 @@
 <div class="jumbotron text-center">
     <h1 class="display-4">Welcome to the Career Center Portal!</h1>
     <p class="lead">Empowering your career journey with resources, events, and expert guidance.</p>
-    <a href="/register-beneficiary" class="btn btn-primary btn-lg">Get Started</a>
+    <a href="/register" class="btn btn-primary btn-lg">Get Started</a>
 </div>
 <div class="row mt-5">
     <div class="col-md-4">
         <h3>Register</h3>
-        <p>Join as a beneficiary or facilitator and unlock exclusive resources.</p>
+        <p>Become a beneficiary unlock exclusive resources.</p>
     </div>
     <div class="col-md-4">
-        <h3>Find Opportunities</h3>
+        <h3 font-color="seconday">Find Opportunities</h3>
         <p>Browse job postings and career advancement opportunities.</p>
     </div>
     <div class="col-md-4">
         <h3>Attend Events</h3>
         <p>Participate in career-focused workshops and networking events.</p>
+    </div>
+
+    <div class="col-md-4">
+        <h3>Meet Our Mentors</h3>
+        <p>Meet our team of professional and experienced career counsellors</p>
     </div>
 </div>
 {% endblock %}
